    - Fixed ticket #603: Background tasks fail to work under wperl win32 (AZAWAWI)
    - Added option to open a saved session on startup (SEWI)
    - Fixed ticket #580: On win32, Perl 5 syntax checker is invoked in strange 
      situations (AZAWAWI)
    - Padre now warns about the running process at exit and asks whether to kill 
      it and exit or cancel the shutdown (AZAWAWI)

0.46 2009.09.11
    - Fixed Smart highlighting to show a pale green round box instead of an 
      ugly squiggle (AZAWAWI)
    - Run script waits now after completion for key to continue when run in an
      external win32 window (AZAWAWI).
    - Padre now supports the following extensions:
        - For Perl 5, .pmc and .plx (AZAWAWI, SZABGAB)
        - For Perl 6, .pl6, .pm6, .p6l and .p6m (AZAWAWI)
    - Help search handles now http:// and perldoc:// links (AZAWAWI)
    - Enabled "Syntax Check" tab is now shown when there is a problem without
      losing editor focus (AZAWAWI)
    - Handle "Recent files" Padre crash when it is called with a file that no 
      longer exists. The entry is deleted and a message box is shown (AZAWAWI)
    - Added a "extract subroutine" function (RHEBUS)
    - Handle "Open all Recent Files" Padre crash when setup_editor is called 
      with a file that no longer exists (AZAWAWI)
    - Fixed ticket #536 Padre auto converts EOLs automatically (AZAWAWI)
    - Pod::Perldoc 3.15 is required now. Allowing help on $. and similar. (AZAWAWI)
    - Fixed Arabic/Hebrew developer/translator names in Padre's about box (AZAWAWI)
    - Bundled more Perl Operators documentation [perlopref.pod] (AZAWAWI, COWENS)
    - Made beginner-error-checks work (SEWI)

0.45 2009.09.02
    - Disabled 'Test Plugin From Local Dir' menu option until it's properly fixed (GARU)
    - Fixed PluginManager Pod glitch for deprecated Perl5 plugin (ADAMK)
    - Fixed various open bugs which exist on Gnome but not on Windows (SEWI)
    - Several translation updates (thanks to all translators!)
